vlib/v/parser/tests/too_many_generics_err.vv
fn too_many<A, B, D, E, F, G, H, I, J, K>() {}
